refactor: some refactor